trackingdogsupply.com/html/app/design/frontend/Shero/TDS2/web/css/shero-style.css
/* ... */
.no-left-gutter {margin-left:0;}
.no-right-gutter {margin-right:0;}

/***** general *****/
body{
    font-family: Arial, Helvetica, sans-serif;
    background-color: #f5f5f5;
    font-size: 1.35em;
    line-height: 1.4;
}
label, .label {color:#333;font-size:100%;padding:0; white-space: normal;margin-left: 3px;}
.checkbox, .radio {display:initial;}

a:visited, .alink:visited {
    color: #333;

}
a, .alink {
    color: #333;

}
a:hover, .alink:hover {
    text-decoration: none;
    color: #889f23;
}


.table>tbody>tr.info>td, .table>tbody>tr.info>th, .table>tbody>tr>td.info, .table>tbody>tr>th.info, .table>tfoot>tr.info>td, .table>tfoot>tr.info>th, .table>tfoot>tr>td.info, .table>tfoot>tr>th.info, .table>thead>tr.info>td, .table>thead>tr.info>th, .table>thead>tr>td.info, .table>thead>tr>th.info {
    background-color: #f5f5f5;
}

form .label {text-align:left;}

.page-header, .sections, .page-main, .page-footer,.breadcrumbs{
    background-color:#fff
}
.page-main, .footer-primary{border: 1px solid #dddddd;}
.links > li {float:left;}
.links > li > a {
    padding: 0 0.5833em;
}
.clearfix:after {
    display: block;
    content: ".";
    clear: both;
    font-size: 0;
    line-height: 0;
    height: 0;
    overflow: hidden;
}
.pager .toolbar-amount {display:none;}
iframe {max-width:100%;}
.block.newsletter input {height:35px;}

.pager li>a, .pager li>span {border-radius:0;}
.pages .action.nonlink:hover {background-color:#f0f0f0;}
/**** header ****/
.page-header {margin-top:0;}

.nav-toggle {position:relative;top:200px;width:50px;}
.free-ship {
    width: 100%;
    float: right;
    clear: both;
    margin: 15px 0 0 0;
    font-size: 13px;
    font-weight: bold;
    text-align: center;
}
.welcome-help {text-align:center;}
.welcome-help .help {
    font-weight: bold;

    margin-top: 10px;
}
span.help, span.phone {
    font-size: 16px;
    line-height: 22px;
}
.header .phone {
    background: url(../images/ic-phone.png) 0 center no-repeat;
    padding: 0 0 0 24px;
}
span.quality {
    color: #333333;
    font-size: 30px;
    font-family: 'league_gothicregular';
    text-align: left;
    font-weight: normal;
}

.customer-welcome ul li, .header.links li {
    float:none;
}
.panel.header {height:40px;}
.header.panel > .header.links > li > a:visited,.header.panel > .header.links > li > a:visited,.header.panel > .header.links > li > a, .header.links .customer-name span {
    color:#999999;
    text-transform: uppercase;
    font-weight: 600;}
.header.panel > .header.links > li > a:visited:hover,.header.panel > .header.links > li > a:visited:hover,.header.panel > .header.links > li > a:hover, .header.links .customer-name span:hover{color:#333;}

.header.panel > .header.links > li.welcome, .header.panel > .header.links .greet {display:none;}

/*.header.links .counter.qty {
    background: #ff5501;
    color: #ffffff;
    height: 24px;
    line-height: 24px;
    border-radius: 2px;
    display: inline-block;
    margin: 3px 0 0;
    min-width: 18px;
    overflow: hidden;
    padding: 0 3px;
    text-align: center;
    white-space: normal;
}*/
.header.panel > .header.links > li {vertical-align: middle;}

/** mini cart **/
#mini-cart .product-item-name,.minicart-items .product-item-name {min-height:0;}


    /******* Main ********/
.main {padding-top:20px;}

.cms-home .page-main .block {margin-bottom:0;}

/**** slider ******/

.hometop-left .flex-control-nav {bottom:0;}
.hometop-left ul.slides li {margin-bottom:0;}
.hometop-left .magestore-bannerslide-flex-slider {margin-bottom:0!important;}

/* navigation */
.navigation .submenu {background-color:#fff;}
.navigation {color:#fff;}
.navigation .level0 {font-size:17px;}
.navigation .level0 > .level-top, .navigation .level0 > .level-top:hover, .navigation .level0 > .level-top.ui-state-focus, .navigation .level0.active > .level-top, .navigation .level0.has-active > .level-top {
    color: #fff;
}

.navigation .level0 > .level-top {display:block;}
.navigation li.level0:hover > .level-top {
    background-color: #889f23;
}
.navigation .level0.active > .level-top, .navigation .level0.has-active > .level-top{
    border-color: #889f23!important;
    color:#fff!important;
}

span.icon-hover, .feature-icon-hover span.icon{
    transition: color 300ms ease-in-out, background-color 300ms ease-in-out, background-position 300ms ease-in-out;
    -moz-transition: color 300ms ease-in-out, background-color 300ms ease-in-out, background-position 300ms ease-in-out;
    -webkit-transition: color 300ms ease-in-out, background-color 300ms ease-in-out, background-position 300ms ease-in-out;
    -o-transition: color 300ms ease-in-out, background-color 300ms ease-in-out, background-position 300ms ease-in-out;
}

/*** Home **/
.section-title,.cms-home .block-title {
    border-bottom:1px solid #e5e5e5;
    padding-bottom: 7px;
}


.cms-home .page-title-wrapper{display:none;}
.promo-callout-wrapper {display:none;}
.cms-home .widget .block-title strong, .cms-home h3.section-title{
    font-weight: 600;
    line-height: 1.1;
    font-size: 1.8rem;

}
.cms-home .widget .block-title{
    margin-top: 2rem;
    margin-bottom: 1rem;}

.cms-home .widget .products-grid .product-item {margin-bottom:0;}


/* popular */
/*.page-layout-1column .block-popular-products .products-grid .product-item {margin-right:-0.5%;}*/
.block-popular-products  .products-grid .product-item {display:block; float:left;}
/* new product */
.product-item-info {position:relative;}
.sticker-wrapper {
    position: absolute;
    transition: all 150ms ease-in-out;
    -moz-transition: all 150ms ease-in-out;
    -webkit-transition: all 150ms ease-in-out;
    -o-transition: all 150ms ease-in-out;
    z-index:2;
}
/* ... */

